@@ -145,59 +145,27 @@ body, a:hover, button:hover {
 
 /* Infinite auto scroll by Digital Moves */
 
-/* ===== AP—REPS v0.2 — Gallery crop on grid slides (scoped) ===== */
-.apreps .tab-panel .page-section .sqs-gallery.sqs-gallery-design-grid .slide {
-  position: relative;
+/* ===== AP—REPS v0.3 — Safe aspect-ratio enforcement ===== */
+.apreps [data-wm-plugin="tabs"] .sqs-gallery.sqs-gallery-design-grid .slide.portrait .margin-wrapper {
+  aspect-ratio: 3 / 4;
 }
 
-.apreps .tab-panel .page-section .sqs-gallery.sqs-gallery-design-grid .margin-wrapper {
-  position: relative;
-  overflow: hidden;
-}
-
-/* Aspect boxes on the wrapper, class goes on .slide */
-.apreps .sqs-gallery.sqs-gallery-design-grid .slide.portrait  .margin-wrapper::before { content:""; display:block; padding-top:133.333%; } /* 3:4 */
-.apreps .sqs-gallery.sqs-gallery-design-grid .slide.landscape .margin-wrapper::before { content:""; display:block; padding-top:75%; }       /* 4:3 */
-
-/* Fill the box, flush-top crop */
-.apreps .sqs-gallery.sqs-gallery-design-grid .margin-wrapper .image-slide-anchor,
-.apreps .sqs-gallery.sqs-gallery-design-grid .margin-wrapper img.thumb-image {
-  position: absolute !important;
-  inset: 0 !important;
-  width: 100% !important;
-  height: 100% !important;
+.apreps [data-wm-plugin="tabs"] .sqs-gallery.sqs-gallery-design-grid .slide.landscape .margin-wrapper {
+  aspect-ratio: 4 / 3;
 }
 
 .apreps .sqs-gallery.sqs-gallery-design-grid .margin-wrapper img.thumb-image {
+  width: 100%;
+  height: 100%;
   object-fit: cover;
   object-position: top center;
   display: block;
 }
 
-/* Caption alignment (if titles/descriptions are shown) */
-.apreps .sqs-gallery-block-show-meta .image-slide-title,
-.apreps .sqs-gallery-block-show-meta .sqs-block-caption,
-.apreps .sqs-gallery-block-show-meta .image-meta {
+.apreps .sqs-gallery.sqs-gallery-design-grid .image-slide-title,
+.apreps .sqs-gallery.sqs-gallery-design-grid .sqs-block-caption,
+.apreps .sqs-gallery.sqs-gallery-design-grid .image-meta {
   text-align: left !important;
-  margin-top: .5rem;
+  margin-top: 0.5rem;
   line-height: 1.3;
-}
-
-/* Optional: kill built-in square/specific AR styles trying to size the grid */
-/*
-.apreps .sqs-gallery-block-grid [style*="width:"],
-.apreps .sqs-gallery-block-grid [style*="height:"] {
-  /* Do not nuke everything — we override only the image/anchor above */
-}
-*/
-
-/* --- patch: correct grid item sizing while debugging --- */
-.apreps .sqs-gallery.sqs-gallery-design-grid .slide { height: auto !important; }
-.apreps .sqs-gallery.sqs-gallery-design-grid .margin-wrapper::before { display: none; }
-.apreps .sqs-gallery.sqs-gallery-design-grid .margin-wrapper img.thumb-image {
-  position: static !important;
-  width: 100% !important;
-  height: auto !important;
-  object-fit: cover;
-  object-position: top center;
 }
