@@ -159,3 +159,8 @@ Want me to flip it back to enforced 3:4 / 4:3 once you confirm the grid is stabl
 
 /* made everything portrait */
 https://www.dropbox.com/scl/fi/7syotwhe8qwh10dfy5ian/Screenshot-2025-10-22-at-3.59.45-pm.png?rlkey=2oqdia6dkvttv0xdj5ec7zs2c&dl=0
+
+
+git add 02_styles/custom.css
+git commit -m "feat(gallery): v0.3 aspect-ratio enforcement and caption alignment"
+https://www.dropbox.com/scl/fi/dgnrjsj5i6rlahj1wut11/Screenshot-2025-10-22-at-6.35.05-pm.png?rlkey=jzyi8agfl6ibryuonplhppx3j&dl=0
